--- a/ModeloTCC.tex
+++ b/ModeloTCC.tex
@@ -8,6 +8,8 @@
 \usepackage{latexsym}		
 \usepackage{alltt}	
 \usepackage{fancyhdr}	
+\usepackage{booktabs}
+\usepackage{multirow}
 \usepackage{indentfirst}		  
 \usepackage{vmargin}
 \usepackage{bbm}
@@ -22,7 +24,8 @@
 \usepackage[normalem]{ulem}
 \usepackage{wrapfig}
 \usepackage{amsmath}
-\usepackage{graphicx} 
+\usepackage{graphicx}
+\usepackage{subfigure}
 \usepackage{environ}
 \usepackage{verbatim}
 %\usepackage[num]{abntex2cite}
