--- a/7-Conclusao/capitulo_conclusao.tex
+++ b/7-Conclusao/capitulo_conclusao.tex
@@ -32,7 +32,7 @@ Para ambientes transacionais cuja modelagem ainda segue os padrões de normaliza
 Como continuidade para a pesquisa sugere-se:
 
 \begin{itemize}
-    \item Realizar um estudo mais aprofundado sobre escalabilidade horizontal em bancos NoSQL, e se possível aplicar o \textit{benchmark} considerando um cenário utilizando um único servidor para processamento de consultas e outro com vários servidores, a fim de simular problemas que teoricamente são solucionados pela partição horizontal, como queda, ou falha, e distribuição de dados.
+    \item Realizar um estudo mais aprofundado sobre escalabilidade horizontal em bancos NoSQL, e se possível aplicar o \textit{benchmark} considerando um cenário utilizando um único servidor para processamento de consultas e outro com vários servidores, a fim de simular problemas que teoricamente são solucionados pelo particionamento horizontal, como queda, ou falha, e distribuição de dados.
 
     \item Utilizar bases de dados maiores, a partir de 100Gb, para que se possa também comparar os resultados com os contidos na página oficial do TPC-H.
 
