--- a/6-Experimento/capitulo_experimento.tex
+++ b/6-Experimento/capitulo_experimento.tex
@@ -25,7 +25,7 @@ devido à simplificação no desenvolvimento de aplicações, por dar suporte a
 diferentes SGBD e possuir boa documentação e tutoriais. Na análise de tempo 
 foi considerada a latência da Máquina Virtual Java (JVM), assim incluindo essa 
 latência no tempo total. As versões dos SGBD utilizadas 
-foram o PostgreSQL 9.6 e o MonetDB XXX e foram instalados no servidor do laboratório GIA, operando o 
+foram o PostgreSQL 9.6 e o MonetDB 11.29.3 e foram instalados no servidor do laboratório GIA, operando sob o 
 sistema operacional Ubuntu Linux 16.04 LTS, com 16Gb de RAM e dois 
 processadores Intel Xeon CPU E5620 2.40GHz.
 
@@ -324,7 +324,7 @@ Pela Tabela \ref{tab:queries_cold_30} pode-se verificar que no banco colunar o c
 
 \subsection{Desempenho Geral}
 
-No cenário rodando sob \textit{cold run} o MonetDB não obteve resultados considerados estáveis como o PostgreSQL. Embora haja a conclusão que o SGBD colunar seja melhor que o relacional, avaliando os dados dentro do MonetDB não se sabe ao certo qual modelagem é melhor, trazendo incerteza na sua escolha. 
+No cenário rodando sob \textit{cold run} o MonetDB não obteve resultados considerados estáveis como o PostgreSQL. Embora haja a conclusão que o SGBD colunar é melhor que o relacional, avaliando os dados dentro do MonetDB não se sabe ao certo qual modelagem é melhor, trazendo incerteza na sua escolha. 
 
 Considerando vários usuários ativos o resultado foi como esperado. Se considerar também somente as RF, o MonetDB teve valores muito superiores para inserção de dados, e na remoção somente para uma base maior no ambiente denormalizado o PostgreSQL foi melhor. O que impactou nos resultados do banco colunar foi o comportamento anormal das consultas.
 
@@ -338,7 +338,7 @@ O comportamento do teste de força no banco MonetDB não segue uma queda conform
         \label{fig:power_cold}
 \end{figure*}
 
-O cálculo de desempenho final foi afetado por essa inflexão. Se analisar os resultados considerando os SGBD sob as modelagens \textit{snowflake} e \textit{star}, o MonetDB se destaca no resultado final, fazendo dele a melhor escolha entre os bancos, como mostram os gráficos da Figuras \ref{fig:qph_snow_cold} e \ref{fig:qph_star_cold}. Porém ao considerar os ambientes sob cada SGBD, a única conclusão coerente que se tem é de que o PostgreSQL é melhor em ambientes normalizados, como ilustra o gráfico da Figura \ref{fig:qph_psql_cold}, e conforme a base aumenta o cálculo de desempenho é menor.
+O cálculo de desempenho final foi afetado por essa inflexão. Se analisar os resultados considerando os SGBD sob as modelagens \textit{snowflake} e \textit{star}, o MonetDB se destaca no resultado final, fazendo dele a melhor escolha entre os bancos, como mostram os gráficos da Figuras \ref{fig:qph_snow_cold} e \ref{fig:qph_star_cold} e os ganhos obtidos por ele em relação ao PostgreSQL conforme a Tabela \ref{tab:ganho_monet_psql_cold}. Porém ao considerar os ambientes sob cada SGBD, a única conclusão coerente que se tem é de que o PostgreSQL é melhor em ambientes normalizados, como ilustra o gráfico da Figura \ref{fig:qph_psql_cold}, no qual conforme a base aumenta o cálculo de desempenho é menor e sempre há ganhos do normalizado em relação ao denormalizado, sendo estes \textbf{42\%, 70\%} e \textbf{54\%} para 1Gb, 10Gb e 30Gb respectivamente.
 
 \begin{figure*}[htpb]
         \centering
@@ -347,16 +347,29 @@ O cálculo de desempenho final foi afetado por essa inflexão. Se analisar os re
         \caption{Gráficos de desempenho entre ambientes sob \textit{cold run}}
         \label{fig:qph_model_cold}
 \end{figure*}
-    
+
+\begin{table}[htpb]
+        \centering
+        \caption{Porcentagem de ganho de desempenho do MonetDB em relação ao PostgreSQL sob \textit{cold run}}
+        \label{tab:ganho_monet_psql_cold}
+        \begin{tabular}{|c|c|c|c|}
+        \hline
+        \multirow{2}{*}{\textbf{Ambiente}} & \multicolumn{3}{c|}{\textbf{Base de Dados (Gb)}} \\ \cline{2-4} 
+                                           & \textbf{1}     & \textbf{10}    & \textbf{30}    \\ \hline
+        \textit{Snowflake}                 & 110\%          & 108\%          & 80\%           \\ \hline
+        \textit{Star}                      & 241\%          & 735\%          & 273\%          \\ \hline
+        \end{tabular}
+\end{table}
+
 \begin{figure*}[htpb]
         \centering
         \subfigure[]{\includegraphics[width=7.2cm]{qph_monet_cold}\label{fig:qph_monet_cold}}
         \subfigure[]{\includegraphics[width=7.2cm]{qph_psql_cold}\label{fig:qph_psql_cold}}
-        \caption{Gráficos de desempenho entre SGBD sob \textit{hot run}}
+        \caption{Gráficos de desempenho entre SGBD sob \textit{cold run}}
         \label{fig:qph_sgbd_cold}
 \end{figure*}
 
-O MonetDB não segue uma lógica da qual se pode tirar alguma conclusão de acordo com a modelagem. Conforme o tamanho da base de dados o valor também diminui assim como no PostgreSQL, porém entre as modelagens há uma inconsistência na comparação entre seus valores, visto que para 1Gb o ambiente normalizado foi melhor, já para 10Gb foi o denormalizado e para 30Gb o comportamento é como em 1Gb, como ilustra o gráfico da Figura \ref{fig:qph_monet_cold}. 
+O MonetDB não segue uma lógica da qual se pode tirar alguma conclusão de acordo com a modelagem. Conforme o tamanho da base de dados aumenta o valor diminui assim como no PostgreSQL, porém entre as modelagens há uma inconsistência na comparação entre seus valores, visto que para 1Gb o ambiente normalizado foi melhor com ganho de \textbf{5\%}, já para 10Gb foi o denormalizado com \textbf{22\%} de ganho, e para 30Gb o comportamento é como em 1Gb com \textbf{4\%} de ganho do normalizado, como ilustra o gráfico da Figura \ref{fig:qph_monet_cold}. 
 
 % --------------------------------------------
 % HOT RUN
@@ -385,7 +398,7 @@ Na terceira execução de todas as consultas já nota-se uma grande diferença n
 \end{table}
 
 % TABELA DE TEMPO DE CONSULTAS E RF
-\begin{table}[t]
+\begin{table}[htpb]
         \centering
         \caption{Tempo em segundos de todas as consultas do teste de força e funções de atualização sob \textit{hot run} para 1Gb}
         \label{tab:queries_hot_1}
@@ -522,7 +535,7 @@ Ao contrário do cenário sob \textit{cold run}, utilizar o terceiro conjunto de
         \label{fig:power_hot}
 \end{figure*}
 
-Pelo gráfico das Figuras \ref{fig:qph_snow_hot} e \ref{fig:qph_star_hot} percebe-se que o MonetDB continua melhor que o PostgreSQL, porém agora seus valores também são superiores aos calculados no desempenho final considerando a \textit{cold run}. Ainda, analisando os ambientes sob cada SGBD pelos gráficos das Figuras \ref{fig:qph_monet_hot} e \ref{fig:qph_psql_hot} nota-se pela segunda que o PostgreSQL continua tendo desempenho melhor no ambiente normalizado ao denormalizado, enquanto que a primeira mostra que agora o MonetDB possui valores superiores em todas as bases para o ambiente denormalizado.
+Pelo gráfico das Figuras \ref{fig:qph_snow_hot} e \ref{fig:qph_star_hot} percebe-se que o MonetDB continua melhor que o PostgreSQL, conforme os ganhos apresentados na Tabela \ref{tab:ganho_monet_psql_hot}, e agora seus valores também são superiores aos calculados no desempenho final considerando a \textit{cold run}. Ainda, analisando os ambientes sob cada SGBD pelos gráficos das Figuras \ref{fig:qph_monet_hot} e \ref{fig:qph_psql_hot} nota-se pela segunda que o PostgreSQL continua tendo desempenho melhor no ambiente normalizado ao denormalizado, com ganhos de \textbf{40\%, 70\%} e \textbf{53\%} enquanto que a primeira mostra que agora o MonetDB possui valores superiores em todas as bases para o ambiente denormalizado, com ganhos de \textbf{54\%, 63\%} e \textbf{63\%}.
 
 \begin{figure*}[htpb]
         \centering
@@ -531,6 +544,19 @@ Pelo gráfico das Figuras \ref{fig:qph_snow_hot} e \ref{fig:qph_star_hot} perceb
         \caption{Gráficos de desempenho entre ambientes sob \textit{hot run}}
         \label{fig:qph_model_hot}
 \end{figure*}
+
+\begin{table}[htpb]
+        \centering
+        \caption{Porcentagem de ganho de desempenho do MonetDB em relação ao PostgreSQL sob \textit{hot run}}
+        \label{tab:ganho_monet_psql_hot}
+        \begin{tabular}{|c|c|c|c|}
+        \hline
+        \multirow{2}{*}{\textbf{Ambiente}} & \multicolumn{3}{c|}{\textbf{Base de Dados (Gb)}} \\ \cline{2-4} 
+        & \textbf{1}     & \textbf{10}    & \textbf{30}    \\ \hline
+        \textit{Snowflake}                 & 341\%          & 251\%          & 177\%          \\ \hline
+        \textit{Star}                      & 1031\%         & 1817\%         & 694\%          \\ \hline
+        \end{tabular}
+\end{table}
     
 \begin{figure*}[htpb]
         \centering
@@ -540,7 +566,33 @@ Pelo gráfico das Figuras \ref{fig:qph_snow_hot} e \ref{fig:qph_star_hot} perceb
         \label{fig:qph_sgbd_hot}
 \end{figure*}
 
-Os valores do SGBD PostgreSQL não tiveram mudanças drásticas se comparar as execuções \textit{cold} e \textit{hot}. A Tabela X mostra a porcentagem de ganho entre os valores obtidos na primeira execução e na terceira execução para o PostgreSQL. Entretanto, os valores do MonetDB se alteraram de forma que houve impacto no resultado final tanto do teste de força como no cálculo final de \textit{benchmark}.
+Os valores do SGBD PostgreSQL não tiveram mudanças drásticas se comparar as execuções \textit{cold} e \textit{hot}, inclusive na base de dados 30Gb sob a modelagem normalizada a primeira foi melhor que a segunda. A Tabela \ref{tab:ganho_postgresql_cold_hot} mostra a porcentagem de ganho e perdas entre os valores obtidos na terceira execução em relação à primeira execução para o PostgreSQL. Entretanto, os valores do MonetDB se alteraram de forma que houve impacto no resultado final tanto do teste de força como no cálculo final de \textit{benchmark}, como mostram os ganhos da \textit{hot run} em relação à \textit{cold run} na Tabela \ref{tab:ganho_monet_cold_hot}.
+
+\begin{table}[htpb]
+        \centering
+        \caption{Porcentagem de ganho e perda de desempenho do PostgreSQL da \textit{hot run} em relação à \textit{cold run}}
+        \label{tab:ganho_postgresql_cold_hot}
+        \begin{tabular}{|c|c|c|c|}
+        \hline
+        \multirow{2}{*}{\textbf{Ambiente}} & \multicolumn{3}{c|}{\textbf{Base de Dados (Gb)}} \\ \cline{2-4} 
+        & \textbf{1}     & \textbf{10}    & \textbf{30}    \\ \hline
+        \textit{Snowflake}                 & 10\%           & 6\%            & -1\%           \\ \hline
+        \textit{Star}                      & 13\%           & 4\%            & 1\%            \\ \hline
+        \end{tabular}
+\end{table}
+
+\begin{table}[htpb]
+        \centering
+        \caption{Porcentagem de ganho de desempenho do MonetDB da \textit{hot run} em relação à \textit{cold run}}
+        \label{tab:ganho_monet_cold_hot}
+        \begin{tabular}{|c|c|c|c|}
+        \hline
+        \multirow{2}{*}{\textbf{Ambiente}} & \multicolumn{3}{c|}{\textbf{Base de Dados (Gb)}} \\ \cline{2-4} 
+        & \textbf{1}     & \textbf{10}    & \textbf{30}    \\ \hline
+        \textit{Snowflake}                 & 57\%           & 44\%           & 35\%           \\ \hline
+        \textit{Star}                      & 74\%           & 58\%           & 54\%           \\ \hline
+        \end{tabular}
+\end{table}
 
 De acordo com a página oficial do MonetDB \cite{monetdb2017c}, este SGBD se destaca quando dados acessados pelo usuário podem ser mantidos na memória principal do servidor ou quando algumas colunas são solicitadas e são suficientes para manipular uma solicitação, como é o caso do ambiente analítico. Isso explica o porquê das consultas da primeira execução apresentarem desempenho inferior às da terceira execução. Na segunda e na terceira execução alguns dados das consultas já estão em \textit{cache}, assim o SGBD consegue recuperá-los mais rapidamente.
 
@@ -694,7 +746,7 @@ Considerando a segunda execução, o resultado final de desempenho pode ser vist
         \label{fig:qph_model_cache}
 \end{figure*}
 
-\begin{figure*}[htpb]
+\begin{figure*}[t]
         \centering
         \subfigure[]{\includegraphics[width=7.2cm]{qph_snow_cache_2}\label{fig:qph_snow_cache_2}}
         \subfigure[]{\includegraphics[width=7.2cm]{qph_star_cache_2}\label{fig:qph_star_cache_2}}
