--- a/2-DW/capitulo_dw.tex
+++ b/2-DW/capitulo_dw.tex
@@ -41,21 +41,21 @@ Dentro do domínio de um DW existem diversos componentes que realizam funções 
 
 Existe uma discussão acerca da modelagem conceitual da área de apresentação de dados de um ambiente de análise nos DWs \cite{sen2005comparison}. Segundo Sen e Sinha \cite{sen2005comparison} as duas técnicas de modelagem mais utilizadas são a ER (Entidade-Relacional) e a Dimensional. A primeira segue o padrão de modelagem para ambientes OLTP, que traduz a modelagem ER para um esquema relacional em seguida normalizando-o geralmente até a Terceira Forma Normal (3NF) \cite{kimball2002dw}. O modelo Dimensional, ou multidimensional, por sua vez, evita atingir o mesmo nível de normalização da modelagem ER. 
 
-O modelo dimensional é composto por tabelas denominadas Tabelas Fato e Tabelas Dimensão \cite{kimball2002dw}, conhecido comumente como modelo \textit{Star Join}, ou apenas \textit{Star} \cite{sen2005comparison}. Uma Tabela Fato é a principal tabela do modelo Dimensional, contemplando atributos responsáveis por determinar as métricas de negócio. Em sua maioria são atributos numéricos, relacionados à \textit{quantidade}; e aditivos, visto que uma consulta em um DW pode retornar até milhares de tuplas, tornando interessante o conhecimento de informações como o total de um atributo dada alguma questão de negócio. As Tabelas Fato são auxiliadas pelas Tabelas Dimensão no que concerne à descrição textual das questões de negócio. É comum estas tabelas terem de 50 a 100 atributos, e que estes atributos sejam responsáveis pelas restrições de uma consulta, sendo também comumente utilizados em agrupamentos. Todas as Tabelas Fato tem duas ou mais chaves estrangeiras (\textit{Foreign Keys} -- FKs) relacionadas às chaves primárias (\textit{Primary Keys} -- PKs) das Tabelas Dimensão, como mostra o exemplo da Figura \ref{fig:star_dim}, onde a tabela Vendas corresponde à uma Tabela Fato e as demais à Tabelas Dimensão. Note que esta figura também faz referência a um modelo \textit{Star}.
+O modelo dimensional é composto por tabelas denominadas Tabelas Fato e Tabelas Dimensão \cite{kimball2002dw}, conhecido comumente como modelo \textit{star join}, ou apenas \textit{star} \cite{sen2005comparison}. Uma Tabela Fato é a principal tabela do modelo Dimensional, contemplando atributos responsáveis por determinar as métricas de negócio. Em sua maioria são atributos numéricos, relacionados à \textit{quantidade}; e aditivos, visto que uma consulta em um DW pode retornar até milhares de tuplas, tornando interessante o conhecimento de informações como o total de um atributo dada alguma questão de negócio. As Tabelas Fato são auxiliadas pelas Tabelas Dimensão no que concerne à descrição textual das questões de negócio. É comum estas tabelas terem de 50 a 100 atributos, e que estes atributos sejam responsáveis pelas restrições de uma consulta, sendo também comumente utilizados em agrupamentos. Todas as Tabelas Fato tem duas ou mais chaves estrangeiras (\textit{Foreign Keys} -- FKs) relacionadas às chaves primárias (\textit{Primary Keys} -- PKs) das Tabelas Dimensão, como mostra o exemplo da Figura \ref{fig:star_dim}, onde a tabela Vendas corresponde à uma Tabela Fato e as demais à Tabelas Dimensão. Note que esta figura também faz referência a um modelo \textit{star}.
 
 \begin{figure*}[htpb]
 	\centering
 		\includegraphics[width=13cm]{img/star_dim}
-	\caption{Exemplo de esquema \textit{Star} com tabelas Fato e Dimensão}
+	\caption{Exemplo de esquema \textit{star} com tabelas Fato e Dimensão}
 	\label{fig:star_dim}
 \end{figure*}
 
-Mesmo que a modelagem Dimensional não atinja a normalização 3NF, modelos \textit{Star} podem ser trabalhados de forma a oferecer suporte à hierarquia de atributos das Tabelas Dimensão, permitindo que estas tenham "Tabelas Subdimensão". A esse refinamento se dá o nome de \textit{Snow Flake} \cite{navathe2011banco}. Embora tenham uma estrutura mais simplificada, segundo Levene e Loizou \cite{levene2003snowflake} a escolha do uso de esquemas \textit{Snow Flake} se dá por serem um esquema intuitivo, de fácil entendimento, passíveis à otimização de consultas, e de fácil extensão -- uma vez que pode-se adicionar atributos às tabelas sem interferir em programas já existentes. Uma possível adaptação de um modelo \textit{Star} para \textit{Snow Flake} é como mostrado na Figura \ref{fig:snow}, no qual foi adaptado o modelo da Figura \ref{fig:star_dim}, adicionando a Tabela Subdimensão Cidade. 
+Mesmo que a modelagem Dimensional não atinja a normalização 3NF, modelos \textit{star} podem ser trabalhados de forma a oferecer suporte à hierarquia de atributos das Tabelas Dimensão, permitindo que estas tenham "Tabelas Subdimensão". A esse refinamento se dá o nome de \textit{snowflake} \cite{navathe2011banco}. Embora tenham uma estrutura mais simplificada, segundo Levene e Loizou \cite{levene2003snowflake} a escolha do uso de esquemas \textit{snowflake} se dá por serem um esquema intuitivo, de fácil entendimento, passíveis à otimização de consultas, e de fácil extensão -- uma vez que pode-se adicionar atributos às tabelas sem interferir em programas já existentes. Uma possível adaptação de um modelo \textit{star} para \textit{snowflake} é como mostrado na Figura \ref{fig:snow}, no qual foi adaptado o modelo da Figura \ref{fig:star_dim}, adicionando a Tabela Subdimensão Cidade. 
 
 \begin{figure*}[htpb]
 	\centering
 		\includegraphics[width=13cm]{img/snow}
-	\caption{Exemplo de esquema \textit{Snow Flake} adaptado da Figura \ref{fig:star_dim}}
+	\caption{Exemplo de esquema \textit{snowflake} adaptado da Figura \ref{fig:star_dim}}
 	\label{fig:snow}
 \end{figure*}
 
